--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <section class="page-header">
       <h1 class="project-name">Test</h1>
       <h2 class="project-tagline">ololo</h2>
-      <a href="https://github.com/Yuriy-Leonov/test" class="btn">View on GitHub</a>
-      <a href="https://github.com/Yuriy-Leonov/test/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/Yuriy-Leonov/test/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://github.com/Yuriy-Leonov/test2" class="btn">View on GitHub</a>
+      <a href="https://github.com/Yuriy-Leonov/test2/zipball/gh-pages" class="btn">Download .zip</a>
+      <a href="https://github.com/Yuriy-Leonov/test2/tarball/gh-pages" class="btn">Download .tar.gz</a>
     </section>
 
     <section class="main-content">
